# svm_recognition

./: CMakeLists.txt  OCLMain.cpp  README.md  main.cpp
include/: BoW.h  OCLCommon.h  OCLUtils.h  ObjectClassifier.h  ObjectDescription.h  SVMUtils.hpp  svm.h
src/: BoW.cpp  OCLPose3D.cpp  OCLUtils.cpp  ObjectClassifier.cpp  ObjectDescription.cpp
